# cpp-snippets

./: .gitignore  CMakeLists.txt  Readme.md
.devcontainer/: Dockerfile  devcontainer.json  installImage.sh  postCreate.sh
data/: input.txt
src/constructors/: array.cpp  array.h  array_example.cpp  constructors.cpp  constructors.h  main.cpp
src/data/: names.txt
src/data_types/: distance.h
src/fstream/: read_write_examples.cpp
src/function_ptr/: function_ptr_example.cpp
src/functor/: function_functor_example.cpp
src/inheritance/: amphibian.h  automobile.h  boat.h  meansoftransport.h  multiple_inheritance.cpp  simple_inheritance.cpp  vehicle.h
src/literals/: distance.h  main.cpp
src/operators/: main.cpp  roman.cpp  roman.h
src/stl/: map_and_sort_example.cpp
src/stl_functor_lambda/: map_and_sort_example.cpp
src/template/: list.h  template_example.cpp  template_meta.cpp  template_specialization.cpp
src/threads/: simple_threads.cpp  test.h  threads_mutex_guard_etc.cpp
